--- a/index.html
+++ b/index.html
@@ -34,23 +34,6 @@
             width: 100%;
             height: 60vh; /* Adjust height to be responsive */
         }
-        .back-button {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            background-color: rgba(220, 53, 69, 0.7); /* Transparent red */
-            color: white;
-            padding: 5px 10px; /* Smaller padding */
-            font-size: 0.9rem; /* Smaller font size */
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3); /* Add shadow */
-        }
-        .back-button:hover {
-            background-color: rgba(200, 35, 51, 0.7);
-        }
         .theme-toggle {
             position: absolute;
             top: 20px;
@@ -97,14 +80,6 @@
             background-color: #f0f0f0 !important;
             color: #333 !important;
         }
-        .light-mode .back-button {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #ffffff;
-        }
-        .light-mode .back-button:hover {
-            background-color: rgba(255, 0, 0, 0.7);
-            color: #ffffff;
-        }
         .light-mode .theme-toggle .switch {
             background-color: #ccc;
         }
@@ -124,9 +99,6 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <button class="back-button" onclick="window.location.href='index.html'">
-        Go Back
-    </button>
 
     <div class="theme-toggle">
         <input type="checkbox" id="theme-switch" onchange="toggleTheme()" />
@@ -151,7 +123,7 @@
 
         // Set the channel name and stream URL
         document.getElementById('channelName').textContent = "Live Stream";
-        document.getElementById('streamSource').src = "https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8";
+        document.getElementById('streamSource').src = "https://edge1-moblive.yuppcdn.net/trans1sd/smil:pragtv34.smil/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9MDMvMTAvMjAyNCAxMToyNDozOCBBTSZoYXNoX3ZhbHVlPUpObWYrMVpjc3lVVmVBZThaeTZidVE9PSZ2YWxpZG1pbnV0ZXM9NSZpZD15dXBwdHZvdHRfNV8yMDE3NzBfYTA0NmIxNGUtYzBiNS1mOTAzLTgzZjUtZDE3YzY0MmE1YTFjX0xLXzE3NS4xNTcuMTM2LjkwX3NsdF8xX2NoYW5uZWxfMzRfLTEmc3RybV9sZW49Mjc=";
 
         // Initialize the video player
         var player = videojs('videoPlayer');
