--- a/index.html
+++ b/index.html
@@ -1,105 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Stream</title>
-    <link
-      href="https://vjs.zencdn.net/7.11.4/video-js.css"
-      rel="stylesheet"
-    />
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet">
     <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #121212;
-        color: #ffffff;
-        transition: background-color 0.5s ease, color 0.5s ease;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        overflow: hidden;
-      }
-      .channel-name {
-        font-size: 2rem;
-        font-weight: bold;
-        margin-bottom: 20px;
-      }
-      .video-container {
-        width: 90%;
-        max-width: 1000px;
-        margin: 0 auto;
-      }
-      #videoPlayer {
-        width: 100%;
-        height: 60vh; /* Adjust height to be responsive */
-      }
-      /* Fullscreen mode: make video fill whole screen */
-      .vjs-fullscreen {
-        width: 100% !important;
-        height: 100% !important;
-      }
-      .vjs-tech {
-        object-fit: fill !important;
-      }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #ffffff;
+            transition: background-color 0.5s ease, color 0.5s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .channel-name {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .video-container {
+            width: 90%;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        #videoPlayer {
+            width: 100%;
+            height: 60vh; /* Adjust height to be responsive */
+        }
+        /* When in fullscreen, set video to cover the whole screen */
+        #videoPlayer:-webkit-full-screen,
+        #videoPlayer:-moz-full-screen,
+        #videoPlayer:fullscreen {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="channel-name" id="channelName">Live Stream</div>
     <div class="video-container">
-      <video
-        id="videoPlayer"
-        class="video-js vjs-default-skin"
-        controls
-        preload="auto"
-        poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png"
-      >
-        <source
-          id="streamSource"
-          src="https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8"
-          type="application/x-mpegURL"
-        />
-        Your browser does not support the video tag.
-      </video>
+        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png">
+            <source id="streamSource" src="https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8" type="application/x-mpegURL">
+            Your browser does not support the video tag.
+        </video>
     </div>
-
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
     <script>
-      // Set the channel name and stream URL
-      document.getElementById("channelName").textContent = "Live Stream";
-      document.getElementById("streamSource").src =
-        "https://edge1-moblive.yuppcdn.net/trans1sd/smil:pragtv34.smil/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9MDMvMTAvMjAyNCAxMToyNDozOCBBTSZoYXNoX3ZhbHVlPUpObWYrMVpjc3lVVmVBZThaeTZidVE9PSZ2YWxpZG1pbnV0ZXM9NSZpZD15dXBwdHZvdHRfNV8yMDE3NzBfYTA0NmIxNGUtYzBiNS1mOTAzLTgzZjUtZDE3YzY0MmE1YTFjX0xLXzE3NS4xNTcuMTM2LjkwX3NsdF8xX2NoYW5uZWxfMzRfLTEmc3RybV9sZW49Mjc=;
+        // Set the channel name and stream URL
+        document.getElementById('channelName').textContent = "Live Stream";
+        document.getElementById('streamSource').src = "https://edge1-moblive.yuppcdn.net/trans1sd/smil:pragtv34.smil/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9MDMvMTAvMjAyNCAxMToyNDozOCBBTSZoYXNoX3ZhbHVlPUpObWYrMVpjc3lVVmVBZThaeTZidVE9PSZ2YWxpZG1pbnV0ZXM9NSZpZD15dXBwdHZvdHRfNV8yMDE3NzBfYTA0NmIxNGUtYzBiNS1mOTAzLTgzZjUtZDE3YzY0MmE1YTFjX0xLXzE3NS4xNTcuMTM2LjkwX3NsdF8xX2NoYW5uZWxfMzRfLTEmc3RybV9sZW49Mjc=";
 
-      // Initialize the video player
-      var player = videojs("videoPlayer");
-      player.ready(function () {
-        player.play(); // Start playback when player is ready
-      });
+        // Initialize the video player
+        var player = videojs('videoPlayer');
+        player.ready(function() {
+            player.play(); // Start playback when player is ready
+        });
 
-      // Disable right-click
-      document.addEventListener("contextmenu", function (e) {
-        e.preventDefault();
-      });
+        // Disable right-click
+        document.addEventListener('contextmenu', function(e) {
+            e.preventDefault();
+        });
 
-      // Disable certain key combinations
-      document.addEventListener("keydown", function (e) {
-        if (
-          (e.ctrlKey &&
-            (e.key === "u" ||
-              e.key === "s" ||
-              e.key === "a" ||
-              e.key === "p")) ||
-          e.key === "F12" ||
-          (e.ctrlKey &&
-            e.shiftKey &&
-            (e.key === "I" || e.key === "J" || e.key === "C"))
-        ) {
-          e.preventDefault();
-        }
-      });
+        // Disable certain key combinations
+        document.addEventListener('keydown', function(e) {
+            if (e.ctrlKey && (e.key === 'u' || e.key === 's' || e.key === 'a' || e.key === 'p') || 
+                e.key === 'F12' || 
+                (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'J' || e.key === 'C'))) {
+                e.preventDefault();
+            }
+        });
     </script>
-  </body>
+</body>
 </html>
