--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
     </style>
 </head>
 <body>
-    <div class="channel-name" id="channelName">🔴 Live Stream</div>
+    <div class="channel-name" id="channelName"> «»IPL.Live.Stream«»</div>
     <div class="video-container">
         <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png">
-            <source id="streamSource" src="https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8" type="application/x-mpegURL">
+            <source id="streamSource" src="https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8" type="application/x-mpegURL">
             Your browser does not support the video tag.
         </video>
     </div>
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
     <script>
         // Set the channel name and stream URL
-        document.getElementById('channelName').textContent = "IPL 2025 Live Stream";
-        document.getElementById('streamSource').src = "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8";
+        document.getElementById('channelName').textContent = "IPL2025";
+        document.getElementById('streamSource').src = "https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8";
 
         // Initialize the video player
         var player = videojs('videoPlayer');
