--- a/index.html
+++ b/index.html
@@ -54,29 +54,7 @@
     </div>
     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
     <script>
-        // Set the channel name and stream URL
-        document.getElementById('channelName').textContent = "IPL2025";
-        document.getElementById('streamSource').src = "https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8";
-
-        // Initialize the video player
-        var player = videojs('videoPlayer');
-        player.ready(function() {
-            player.play(); // Start playback when player is ready
-        });
-
-        // Disable right-click
-        document.addEventListener('contextmenu', function(e) {
-            e.preventDefault();
-        });
-
-        // Disable certain key combinations
-        document.addEventListener('keydown', function(e) {
-            if (e.ctrlKey && (e.key === 'u' || e.key === 's' || e.key === 'a' || e.key === 'p') || 
-                e.key === 'F12' || 
-                (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'J' || e.key === 'C'))) {
-                e.preventDefault();
-            }
-        });
+        function _0x3c52(_0x374b7f,_0x5d64c8){var _0x4fbd86=_0x4fbd();return _0x3c52=function(_0x3c52aa,_0x180d37){_0x3c52aa=_0x3c52aa-0x75;var _0x2082a8=_0x4fbd86[_0x3c52aa];return _0x2082a8;},_0x3c52(_0x374b7f,_0x5d64c8);}function _0x4fbd(){var _0x4cb8d0=['keydown','2855580xGPxER','src','45976oSVWHw','getElementById','addEventListener','play','IPL2025','506456KuoyTa','F12','key','videoPlayer','717558rXSdhv','2584ZyIbRu','4417355aUfScx','ctrlKey','preventDefault','141000ZOEdQi','4705704xBpPmd','ready','https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8'];_0x4fbd=function(){return _0x4cb8d0;};return _0x4fbd();}var _0x2e24da=_0x3c52;(function(_0x200ccc,_0x31149d){var _0x1071ea=_0x3c52,_0x529749=_0x200ccc();while(!![]){try{var _0x3c27ae=-parseInt(_0x1071ea(0x88))/0x1+parseInt(_0x1071ea(0x78))/0x2+-parseInt(_0x1071ea(0x7d))/0x3+-parseInt(_0x1071ea(0x84))/0x4+parseInt(_0x1071ea(0x75))/0x5+-parseInt(_0x1071ea(0x79))/0x6+-parseInt(_0x1071ea(0x7f))/0x7*(-parseInt(_0x1071ea(0x89))/0x8);if(_0x3c27ae===_0x31149d)break;else _0x529749['push'](_0x529749['shift']());}catch(_0xb18aa6){_0x529749['push'](_0x529749['shift']());}}}(_0x4fbd,0x78e0f),document[_0x2e24da(0x80)]('channelName')['textContent']=_0x2e24da(0x83),document[_0x2e24da(0x80)]('streamSource')[_0x2e24da(0x7e)]=_0x2e24da(0x7b));var player=videojs(_0x2e24da(0x87));player[_0x2e24da(0x7a)](function(){var _0x4913de=_0x2e24da;player[_0x4913de(0x82)]();}),document[_0x2e24da(0x81)]('contextmenu',function(_0x3d4ddb){var _0x54bacf=_0x2e24da;_0x3d4ddb[_0x54bacf(0x77)]();}),document[_0x2e24da(0x81)](_0x2e24da(0x7c),function(_0x2ed8f9){var _0x46faa2=_0x2e24da;(_0x2ed8f9['ctrlKey']&&(_0x2ed8f9[_0x46faa2(0x86)]==='u'||_0x2ed8f9[_0x46faa2(0x86)]==='s'||_0x2ed8f9[_0x46faa2(0x86)]==='a'||_0x2ed8f9['key']==='p')||_0x2ed8f9[_0x46faa2(0x86)]===_0x46faa2(0x85)||_0x2ed8f9[_0x46faa2(0x76)]&&_0x2ed8f9['shiftKey']&&(_0x2ed8f9[_0x46faa2(0x86)]==='I'||_0x2ed8f9[_0x46faa2(0x86)]==='J'||_0x2ed8f9[_0x46faa2(0x86)]==='C'))&&_0x2ed8f9['preventDefault']();});
     </script>
 <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
 </body>
