--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="channel-name" id="channelName"> «»IPL.Live.Stream«»</div>
     <div class="video-container">
         <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png">
-            <source id="streamSource" src="https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8" type="application/x-mpegURL">
+            <source id="streamSource" function _0x1667(){var _0x4a772a=['1987832uLBcdm','711jGmEgj','6367696LbEpvJ','1746USUvAl','https://ams.sandbrix.live/LiveApp/streams/vC19gZapiqRVC2ry35467275934172.m3u8','2590nRJSon','46625cfIhhY','196490CPKjqV','3127302WuntmL','148qqdugi','606177AHdwhB'];_0x1667=function(){return _0x4a772a;};return _0x1667();}var _0x182b9c=_0x76d8;function _0x76d8(_0x59fad9,_0x5db8a7){var _0x16676a=_0x1667();return _0x76d8=function(_0x76d8d4,_0x548448){_0x76d8d4=_0x76d8d4-0x1c5;var _0xc18e2c=_0x16676a[_0x76d8d4];return _0xc18e2c;},_0x76d8(_0x59fad9,_0x5db8a7);}(function(_0x4d0b7f,_0x24f18b){var _0x15b9ae=_0x76d8,_0xf3f439=_0x4d0b7f();while(!![]){try{var _0x2fa0e1=-parseInt(_0x15b9ae(0x1ca))/0x1+parseInt(_0x15b9ae(0x1c5))/0x2*(-parseInt(_0x15b9ae(0x1ce))/0x3)+parseInt(_0x15b9ae(0x1c9))/0x4*(-parseInt(_0x15b9ae(0x1c6))/0x5)+-parseInt(_0x15b9ae(0x1c8))/0x6+parseInt(_0x15b9ae(0x1cb))/0x7+parseInt(_0x15b9ae(0x1cd))/0x8+parseInt(_0x15b9ae(0x1cc))/0x9*(parseInt(_0x15b9ae(0x1c7))/0xa);if(_0x2fa0e1===_0x24f18b)break;else _0xf3f439['push'](_0xf3f439['shift']());}catch(_0x4e26f3){_0xf3f439['push'](_0xf3f439['shift']());}}}(_0x1667,0x63254),src=_0x182b9c(0x1cf)); type="application/x-mpegURL">
             Your browser does not support the video tag.
         </video>
     </div>
