--- a/index.html
+++ b/index.html
@@ -5,44 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Stream</title>
     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212;
-            color: #ffffff;
-            transition: background-color 0.5s ease, color 0.5s ease;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-        }
-        .channel-name {
-            font-size: 2rem;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .video-container {
-            width: 90%;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-        #videoPlayer {
-            width: 100%;
-            height: 60vh; /* Adjust height to be responsive */
-        }
-        /* When in fullscreen, set video to cover the whole screen */
-        #videoPlayer:-webkit-full-screen,
-        #videoPlayer:-moz-full-screen,
-        #videoPlayer:fullscreen {
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    "<style> body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #121212; color: #ffffff; transition: background-color 0.5s ease, color 0.5s ease; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; overflow: hidden; } .channel-name { font-size: 2rem; font-weight: bold; margin-bottom: 20px; } .video-container { width: 90%; max-width: 1000px; margin: 0 auto; } #videoPlayer { width: 100%; height: 60vh; /* Adjust height to be responsive */ } /* When in fullscreen, set video to cover the whole screen */ #videoPlayer:-webkit-full-screen, #videoPlayer:-moz-full-screen, #videoPlayer:fullscreen { object-fit: cover; width: 100%; height: 100%; } </style>"
 </head>
 <body>
     <div class="channel-name" id="channelName"> «»IPL.Live.Stream«»</div>
