--- a/index.html
+++ b/index.html
@@ -1,83 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Live Stream</title>
-  <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #121212;
-      color: #ffffff;
-      transition: background-color 0.5s ease, color 0.5s ease;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .channel-name {
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    .video-container {
-      width: 90%;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    video.video-js {
-      width: 100%;
-      height: 60vh; /* Adjust height to be responsive */
-    }
-    /* When in fullscreen, set video to cover the whole screen */
-    video.video-js:-webkit-full-screen,
-    video.video-js:-moz-full-screen,
-    video.video-js:fullscreen {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live Stream</title>
+    <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #121212;
+            color: #ffffff;
+            transition: background-color 0.5s ease, color 0.5s ease;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        .channel-name {
+            font-size: 2rem;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+        .video-container {
+            width: 90%;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+        #videoPlayer {
+            width: 100%;
+            height: 60vh; /* Adjust height to be responsive */
+        }
+        /* When in fullscreen, set video to cover the whole screen */
+        #videoPlayer:-webkit-full-screen,
+        #videoPlayer:-moz-full-screen,
+        #videoPlayer:fullscreen {
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-  <div class="channel-name" id="channelName">IPL 2025 Live Stream</div>
-  <div class="video-container">
-    <video class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png" 
-      src="https://edge1-moblive.yuppcdn.net/trans1sd/smil:pragtv34.smil/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9MDMvMTAvMjAyNCAxMToyNDozOCBBTSZoYXNoX3ZhbHVlPUpObWYrMVpjc3lVVmVBZThaeTZidVE9PSZ2YWxpZG1pbnV0ZXM9NSZpZD15dXBwdHZvdHRfNV8yMDE3NzBfYTA0NmIxNGUtYzBiNS1mOTAzLTgzZjUtZDE3YzY0MmE1YTFjX0xLXzE3NS4xNTcuMTM2LjkwX3NsdF8xX2NoYW5uZWxfMzRfLTEmc3RybV9sZW49Mjc=" 
-      type="application/x-mpegURL">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-  
-  <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
-  <script>
-    // Initialize the video player using the video element
-    var player = videojs(document.querySelector('.video-js'));
-    player.ready(function() {
-      player.play(); // Start playback when the player is ready
-    });
-
-    // Disable right-click context menu
-    document.addEventListener('contextmenu', function(e) {
-      e.preventDefault();
-    });
-
-    // Disable specific key combinations
-    document.addEventListener('keydown', function(e) {
-      if (
-        (e.ctrlKey && (e.key === 'u' || e.key === 's' || e.key === 'a' || e.key === 'p')) ||
-        e.key === 'F12' ||
-        (e.ctrlKey && e.shiftKey && (e.key === 'I' || e.key === 'J' || e.key === 'C'))
-      ) {
-        e.preventDefault();
-      }
-    });
-  </script>
-  <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
+    <div class="channel-name" id="channelName">IPL Live Stream</div>
+    <div class="video-container">
+        <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" var _0x108160=_0x1e19;function _0x1e19(_0x4f6123,_0x5de969){var _0x36db22=_0x36db();return _0x1e19=function(_0x1e197f,_0x4a92b9){_0x1e197f=_0x1e197f-0xed;var _0x33f5c6=_0x36db22[_0x1e197f];return _0x33f5c6;},_0x1e19(_0x4f6123,_0x5de969);}(function(_0x1831a8,_0x593194){var _0x11d867=_0x1e19,_0x108bfd=_0x1831a8();while(!![]){try{var _0x47bb77=-parseInt(_0x11d867(0xf4))/0x1+-parseInt(_0x11d867(0xf0))/0x2*(parseInt(_0x11d867(0xf8))/0x3)+-parseInt(_0x11d867(0xee))/0x4+-parseInt(_0x11d867(0xf7))/0x5+-parseInt(_0x11d867(0xf6))/0x6*(parseInt(_0x11d867(0xf2))/0x7)+-parseInt(_0x11d867(0xf5))/0x8*(parseInt(_0x11d867(0xf1))/0x9)+parseInt(_0x11d867(0xef))/0xa*(parseInt(_0x11d867(0xf3))/0xb);if(_0x47bb77===_0x593194)break;else _0x108bfd['push'](_0x108bfd['shift']());}catch(_0x14ffd9){_0x108bfd['push'](_0x108bfd['shift']());}}}(_0x36db,0xeb013),poster=_0x108160(0xed));function _0x36db(){var _0x230ebc=['16890JgRwDZ','1815280LrZwTh','16169094yDNVYV','35xitaqw','51931OKxuAS','612035PEdDDF','8UibJxu','1949658FfRSLJ','4652125mhisON','6EHIPZd','https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png','928676euuxto'];_0x36db=function(){return _0x230ebc;};return _0x36db();}>
+            <source id="streamSource" function _0x3203(){var _0x5a00af=['67152JYQeGC','8yOpdPQ','1442754HPEruH','1420964vmTjut','230kODBrZ','753521AyKToQ','4015611VflKBu','https://edge1-moblive.yuppcdn.net/trans1sd/smil:pragtv34.smil/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9MDMvMTAvMjAyNCAxMToyNDozOCBBTSZoYXNoX3ZhbHVlPUpObWYrMVpjc3lVVmVBZThaeTZidVE9PSZ2YWxpZG1pbnV0ZXM9NSZpZD15dXBwdHZvdHRfNV8yMDE3NzBfYTA0NmIxNGUtYzBiNS1mOTAzLTgzZjUtZDE3YzY0MmE1YTFjX0xLXzE3NS4xNTcuMTM2LjkwX3NsdF8xX2NoYW5uZWxfMzRfLTEmc3RybV9sZW49Mjc=','2271024aZobyD','2713836VeApWS'];_0x3203=function(){return _0x5a00af;};return _0x3203();}function _0x3d0b(_0x556577,_0x5dd7af){var _0x320364=_0x3203();return _0x3d0b=function(_0x3d0b01,_0x297ca3){_0x3d0b01=_0x3d0b01-0x96;var _0x2f4609=_0x320364[_0x3d0b01];return _0x2f4609;},_0x3d0b(_0x556577,_0x5dd7af);}var _0x133f48=_0x3d0b;(function(_0x1e9d63,_0x22ef94){var _0x196c2c=_0x3d0b,_0x45ecc3=_0x1e9d63();while(!![]){try{var _0x121fd6=-parseInt(_0x196c2c(0x9e))/0x1+parseInt(_0x196c2c(0x9c))/0x2+-parseInt(_0x196c2c(0x9b))/0x3+parseInt(_0x196c2c(0x98))/0x4+-parseInt(_0x196c2c(0x9d))/0x5*(parseInt(_0x196c2c(0x99))/0x6)+parseInt(_0x196c2c(0x97))/0x7+-parseInt(_0x196c2c(0x9a))/0x8*(-parseInt(_0x196c2c(0x9f))/0x9);if(_0x121fd6===_0x22ef94)break;else _0x45ecc3['push'](_0x45ecc3['shift']());}catch(_0x5c5fb1){_0x45ecc3['push'](_0x45ecc3['shift']());}}}(_0x3203,0x642a9),src=_0x133f48(0x96)); type="application/x-mpegURL">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
+    <script>
+        var _0xb57c77=_0xc124;function _0xc124(_0x2f7dc0,_0x37a0c1){var _0x31a411=_0x31a4();return _0xc124=function(_0xc12439,_0x353e92){_0xc12439=_0xc12439-0xad;var _0x477f28=_0x31a411[_0xc12439];return _0x477f28;},_0xc124(_0x2f7dc0,_0x37a0c1);}(function(_0x30f0ae,_0x48bc50){var _0x387324=_0xc124,_0x17230e=_0x30f0ae();while(!![]){try{var _0xeb33c5=parseInt(_0x387324(0xb3))/0x1*(-parseInt(_0x387324(0xbc))/0x2)+parseInt(_0x387324(0xc2))/0x3*(-parseInt(_0x387324(0xb0))/0x4)+parseInt(_0x387324(0xbb))/0x5+parseInt(_0x387324(0xc3))/0x6*(parseInt(_0x387324(0xb8))/0x7)+-parseInt(_0x387324(0xb7))/0x8*(parseInt(_0x387324(0xb6))/0x9)+parseInt(_0x387324(0xb5))/0xa+parseInt(_0x387324(0xb4))/0xb;if(_0xeb33c5===_0x48bc50)break;else _0x17230e['push'](_0x17230e['shift']());}catch(_0x439838){_0x17230e['push'](_0x17230e['shift']());}}}(_0x31a4,0x2b084),document[_0xb57c77(0xbf)]('channelName')['textContent']='IPL\x202025\x20Live\x20Stream',document[_0xb57c77(0xbf)](_0xb57c77(0xae))['src']='https://edge1-moblive.yuppcdn.net/trans1sd/smil:pragtv34.smil/playlist.m3u8?wmsAuthSign=c2VydmVyX3RpbWU9MDMvMTAvMjAyNCAxMToyNDozOCBBTSZoYXNoX3ZhbHVlPUpObWYrMVpjc3lVVmVBZThaeTZidVE9PSZ2YWxpZG1pbnV0ZXM9NSZpZD15dXBwdHZvdHRfNV8yMDE3NzBfYTA0NmIxNGUtYzBiNS1mOTAzLTgzZjUtZDE3YzY0MmE1YTFjX0xLXzE3NS4xNTcuMTM2LjkwX3NsdF8xX2NoYW5uZWxfMzRfLTEmc3RybV9sZW49Mjc=');var player=videojs(_0xb57c77(0xc0));function _0x31a4(){var _0x7eb5e4=['16HXclQS','150941wSkfpb','contextmenu','keydown','698990AQTjwS','6YhUdtH','ctrlKey','preventDefault','getElementById','videoPlayer','F12','247665VUkzVd','24lVWgbt','ready','play','streamSource','key','16kJjOQj','addEventListener','shiftKey','84533CktcOO','7155214CPfwtm','1174910MADqMz','1052712CnPTvM'];_0x31a4=function(){return _0x7eb5e4;};return _0x31a4();}player[_0xb57c77(0xc4)](function(){var _0x1231ed=_0xb57c77;player[_0x1231ed(0xad)]();}),document[_0xb57c77(0xb1)](_0xb57c77(0xb9),function(_0x3c8268){var _0x528cda=_0xb57c77;_0x3c8268[_0x528cda(0xbe)]();}),document['addEventListener'](_0xb57c77(0xba),function(_0x5caad4){var _0x1fd66f=_0xb57c77;(_0x5caad4[_0x1fd66f(0xbd)]&&(_0x5caad4['key']==='u'||_0x5caad4[_0x1fd66f(0xaf)]==='s'||_0x5caad4[_0x1fd66f(0xaf)]==='a'||_0x5caad4[_0x1fd66f(0xaf)]==='p')||_0x5caad4[_0x1fd66f(0xaf)]===_0x1fd66f(0xc1)||_0x5caad4[_0x1fd66f(0xbd)]&&_0x5caad4[_0x1fd66f(0xb2)]&&(_0x5caad4[_0x1fd66f(0xaf)]==='I'||_0x5caad4[_0x1fd66f(0xaf)]==='J'||_0x5caad4['key']==='C'))&&_0x5caad4[_0x1fd66f(0xbe)]();});
+    </script>
+<script disable-devtool-auto src='https://cdn.jsdelivr.net/npm/disable-devtool@latest';function _0x2eb6(_0x3e36cb,_0x5366a6){var _0xa758ab=_0xa758();return _0x2eb6=function(_0x2eb6ea,_0x11050a){_0x2eb6ea=_0x2eb6ea-0x67;var _0x585004=_0xa758ab[_0x2eb6ea];return _0x585004;},_0x2eb6(_0x3e36cb,_0x5366a6);}(function(_0x457480,_0x10a2d5){var _0x1044d2=_0x2eb6,_0x404239=_0x457480();while(!![]){try{var _0x58965d=-parseInt(_0x1044d2(0x6a))/0x1+parseInt(_0x1044d2(0x67))/0x2+parseInt(_0x1044d2(0x69))/0x3+-parseInt(_0x1044d2(0x6e))/0x4+-parseInt(_0x1044d2(0x6d))/0x5+-parseInt(_0x1044d2(0x68))/0x6+parseInt(_0x1044d2(0x6c))/0x7*(parseInt(_0x1044d2(0x6b))/0x8);if(_0x58965d===_0x10a2d5)break;else _0x404239['push'](_0x404239['shift']());}catch(_0x2fccdb){_0x404239['push'](_0x404239['shift']());}}}(_0xa758,0x6ef66));function _0xa758(){var _0x59512c=['1860999rVYJig','681130kChIiH','434408tjWJsh','91xBniCx','3008710HZsJoq','1231212zBpquO','1785936GOJDQZ','1044222ttjXiG'];_0xa758=function(){return _0x59512c;};return _0xa758();}></script>
 </body>
 </html>
