--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       Your browser does not support the video tag.
     </video>
   </div>
+  <footer>
+    &copy; <small>DDp:)</small>
+  </footer>
   <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
   <!-- Obfuscated JavaScript to dynamically set the stream URL -->
   <script>
