--- a/index.html
+++ b/index.html
@@ -5,50 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Live Stream</title>
   <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #121212;
-      color: #ffffff;
-      transition: background-color 0.5s ease, color 0.5s ease;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-    .channel-name {
-      font-size: 2rem;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-    .video-container {
-      width: 90%;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-    #videoPlayer {
-      width: 100%;
-      height: 60vh; /* Adjust height to be responsive */
-    }
-    /* When in fullscreen, set video to cover the whole screen */
-    #videoPlayer:-webkit-full-screen,
-    #videoPlayer:-moz-full-screen,
-    #videoPlayer:fullscreen {
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* Unique dark gradient */
+    color: #ffffff;
+    transition: background-color 0.5s ease, color 0.5s ease;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+  }
+  .channel-name {
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Add some text shadow for uniqueness */
+  }
+  .video-container {
+    width: 90%;
+    max-width: 1000px;
+    margin: 0 auto;
+    background-color: rgba(0, 0, 0, 0.8); /* Add a background for floating effect */
+    border-radius: 10px; /* Add rounded corners */
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8); /* Stronger shadow for separation */
+    overflow: hidden; /* Ensures the video stays within rounded corners */
+    padding: 0px; /* Adjusted padding to 0px */
+  }
+  #videoPlayer {
+    width: 100%;
+    height: 60vh; /* Adjust height to be responsive */
+    border-radius: 10px; /* Add rounded corners to the video player */
+  }
+  /* When in fullscreen, set video to cover the whole screen */
+  #videoPlayer:-webkit-full-screen,
+  #videoPlayer:-moz-full-screen,
+  #videoPlayer:fullscreen {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+</style>
 </head>
 <body>
   <div class="channel-name" id="channelName">IPL Live Stream</div>
   <div class="video-container">
     <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png">
-      <!-- The src attribute is removed from the source element -->
       <source id="streamSource" type="application/x-mpegURL">
       Your browser does not support the video tag.
     </video>
