--- a/index.html
+++ b/index.html
@@ -5,55 +5,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Live Stream</title>
   <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet">
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* Unique dark gradient */
-    color: #ffffff;
-    transition: background-color 0.5s ease, color 0.5s ease;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-  }
-  .channel-name {
-    font-size: 2rem;
-    font-weight: bold;
-    margin-bottom: 20px;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Add some text shadow for uniqueness */
-  }
-  .video-container {
-    width: 90%;
-    max-width: 1000px;
-    margin: 0 auto;
-    background-color: rgba(0, 0, 0, 0.8); /* Add a background for floating effect */
-    border-radius: 10px; /* Add rounded corners */
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8); /* Stronger shadow for separation */
-    overflow: hidden; /* Ensures the video stays within rounded corners */
-    padding: 0px; /* Adjusted padding to 0px */
-  }
-  #videoPlayer {
-    width: 100%;
-    height: 60vh; /* Adjust height to be responsive */
-    border-radius: 10px; /* Add rounded corners to the video player */
-  }
-  /* When in fullscreen, set video to cover the whole screen */
-  #videoPlayer:-webkit-full-screen,
-  #videoPlayer:-moz-full-screen,
-  #videoPlayer:fullscreen {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
-</style>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* Unique dark gradient */
+      color: #ffffff;
+      transition: background-color 0.5s ease, color 0.5s ease;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .channel-name {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5); /* Add some text shadow for uniqueness */
+    }
+    .video-container {
+      width: 90%;
+      max-width: 1000px;
+      margin: 0 auto;
+      background-color: rgba(0, 0, 0, 0.8); /* Add a background for floating effect */
+      border-radius: 10px; /* Add rounded corners */
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.8); /* Stronger shadow for separation */
+      overflow: hidden; /* Ensures the video stays within rounded corners */
+      padding: 0px; /* Adjusted padding to 0px */
+      position: relative; /* For glow pseudo-element */
+    }
+    .video-container::before {
+      content: '';
+      position: absolute;
+      top: -20px;
+      left: -20px;
+      right: -20px;
+      bottom: -20px;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.5), transparent);
+      z-index: -1;
+      filter: blur(50px);
+      opacity: 0.7;
+      border-radius: 20px;
+      transition: background 0.2s ease; /* Smooth transition for glow color */
+    }
+    #videoPlayer {
+      width: 100%;
+      height: 60vh; /* Adjust height to be responsive */
+      border-radius: 10px; /* Add rounded corners to the video player */
+    }
+    /* When in fullscreen, set video to cover the whole screen */
+    #videoPlayer:-webkit-full-screen,
+    #videoPlayer:-moz-full-screen,
+    #videoPlayer:fullscreen {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </head>
 <body>
   <div class="channel-name" id="channelName">IPL Live Stream</div>
-  <div class="video-container">
+  <div class="video-container" id="videoContainer">
     <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png">
       <source id="streamSource" type="application/x-mpegURL">
       Your browser does not support the video tag.
@@ -121,6 +136,48 @@
        ))) {
         e[_$_f04a[11]]();
       }
+    });
+
+    // Dynamic glowing effect
+    const video = document.getElementById('videoPlayer');
+    const container = document.getElementById('videoContainer');
+    const canvas = document.createElement('canvas');
+    const ctx = canvas.getContext('2d');
+
+    function extractDominantColor() {
+      canvas.width = video.videoWidth / 10; // Reduce resolution for performance
+      canvas.height = video.videoHeight / 10;
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const frameData = ctx.getImageData(0, 0, canvas.width, canvas.height).data;
+
+      let r = 0, g = 0, b = 0, count = 0;
+
+      for (let i = 0; i < frameData.length; i += 4) {
+        r += frameData[i];
+        g += frameData[i + 1];
+        b += frameData[i + 2];
+        count++;
+      }
+
+      r = Math.floor(r / count);
+      g = Math.floor(g / count);
+      b = Math.floor(b / count);
+
+      return `rgb(${r}, ${g}, ${b})`;
+    }
+
+    function updateGlow() {
+      if (!video.paused && !video.ended) {
+        const color = extractDominantColor();
+        container.style.boxShadow = `0 10px 30px ${color}`;
+        container.style.setProperty('--glow-color', color);
+        container.querySelector('::before').style.background = `radial-gradient(circle, ${color}, transparent)`;
+      }
+      requestAnimationFrame(updateGlow);
+    }
+
+    video.addEventListener('play', () => {
+      requestAnimationFrame(updateGlow);
     });
   </script>
   <script disable-devtool-auto src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
