--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <body>
   <div class="channel-name" id="channelName">IPL Live Stream</div>
   <div class="video-container" id="videoContainer">
-    <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://documents.iplt20.com/bcci/articles/1741097713_IPL_Website.png">
+    <video id="videoPlayer" class="video-js vjs-default-skin" controls preload="auto" poster="https://upload.wikimedia.org/wikipedia/en/1/18/2025_IPL_logo.png">
       <source id="streamSource" type="application/x-mpegURL">
       Your browser does not support the video tag.
     </video>
